--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-sudoku",
   "version": "0.1.0",
   "private": true,
-  "homepag": "https://kaoshengchieh.github.io/109-1-web-deploy-tutorial/",
+  "homepage": "https://kaoshengchieh.github.io/109-1-web-deploy-tutorial/",
   "dependencies": {
     "-": "^0.0.1",
     "@material-ui/core": "^4.11.0",
